--- a/client/src/pages/Registration/Registration.css
+++ b/client/src/pages/Registration/Registration.css
@@ -80,3 +80,42 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
+
+/* Success Page Components */
+
+.success-text {
+    margin-top: 100px;
+    font-size: 2rem;
+}
+
+.sign-in-button {
+    width: 200px;
+    height: 50px;
+    margin-top: 25px;
+    margin-bottom: 10px;
+    border-style: none;
+    border-radius: 30px;
+    font-size: 1.5rem;
+    color: var(--white);
+    background-color: var(--blue);
+}
+
+.sign-in-button:hover {
+    cursor: pointer;
+    color: var(--black);
+    background-color: var(--gray);
+}
+
+
+/* Error Message Components */
+
+.error-message {
+    font-size: 1.25rem;
+    color: var(--red);
+}
+
+.offscreen {
+    position: absolute;
+    left: -9999px;
+}
