--- a/client/src/pages/Suggest/Suggest.css
+++ b/client/src/pages/Suggest/Suggest.css
@@ -126,3 +126,16 @@ label {
     color: var(--black);
     background-color: var(--gray);
 }
+
+
+/* Error Message Components */
+
+.error-message {
+    font-size: 1.25rem;
+    color: var(--red);
+}
+
+.offscreen {
+    position: absolute;
+    left: -9999px;
+}
