--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -58,7 +58,7 @@
 
 .username {
     margin-bottom: 5px;
-    font-size: 1.25rem;   
+    font-size: 1.25rem;
 }
 
 .username:hover {
@@ -66,7 +66,8 @@
     cursor: pointer;
 }
 
-.navMenu, .navMenuActive {
+.navMenu,
+.navMenuActive {
     background-color: var(--black);
     width: 250px;
     height: 100vh;
