--- a/client/src/pages/Mod/Mod.css
+++ b/client/src/pages/Mod/Mod.css
@@ -8,3 +8,134 @@
     justify-content: center;
     padding-top: 125px;
 }
+
+.mod-page-description {
+    width: 90%;
+    height: 20%;
+    padding-bottom: 25px;
+    font-size: 1.5rem;
+}
+
+.mod-page-description div {
+    margin-bottom: 10px;
+}
+
+
+/* Submissions Table Header Components */
+
+.subs-table-header-container {
+    width: 90vw;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 25px auto 0px auto;
+}
+
+.subs-table-header {
+    font-size: 2.5rem;
+}
+
+
+/* Submissions Table Components */
+
+.subs-table {
+    table-layout: fixed;
+    width: 90vw;
+    border-collapse: collapse;
+    margin: 0px, auto;
+    text-align: left;
+    font-size: 1.25rem;
+    color: var(--gray);
+}
+
+.subs-table thead th {
+    font-weight: normal;
+    padding-bottom: 15px;
+    border-bottom: 1px solid var(--gray);
+}
+
+.subs-table th,
+.subs-table td {
+    padding: 15px 15px 0px 15px;
+    margin-bottom: 10px;
+}
+
+.subs-table td {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.subs-table td:hover {
+    overflow: visible;
+    white-space: normal;
+    height: auto;
+}
+
+.subs-table-number {
+    width: 2%;
+}
+
+.subs-table-song {
+    width: 20%;
+}
+
+.subs-table-artist {
+    width: 20%;
+}
+
+.subs-table-player {
+    width: 18%;
+}
+
+.subs-table-link {
+    width: 5%;
+    text-align: center;
+}
+
+.subs-table-user {
+    width: 15%;
+    text-overflow: ellipsis;
+}
+
+.subs-table-date {
+    width: 10%;
+}
+
+.subs-table-action {
+    width: 10%;
+    text-align: center;
+}
+
+.subs-link {
+    text-align: center;
+}
+
+.subs-action {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.circle-button {
+    margin: 0 10px 0 10px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.circle-button:hover {
+    color: var(--white);
+}
+
+.icon-spotify {
+    width: 30px;
+    height: 30px;
+}
+
+.icon-none {
+    width: 30px;
+    height: 30px;
+    color: var(--red);
+}
