--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -1,6 +1,6 @@
 /* Form Modal Components */
 
-.form-modal-background {
+.profile-modal-background {
     width: 100%;
     height: 100%;
     background-color: var(--black);
@@ -10,40 +10,48 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .form-modal-container {
-    width: 75%;
-    height: 75%;
+}
+
+.profile-modal-container {
+    width: 50%;
+    height: 80%;
     border: 2px solid var(--gray);
     border-radius: 30px;
     background-color: var(--black);
     display: flex;
     flex-direction: column;
     padding: 15px;
-  }
-  
-  .form-modal-exit {
+}
+
+.profile-modal-exit {
     display: flex;
     justify-content: flex-start;
-  }
-  
-  .form-modal-exit button {
+}
+
+.profile-modal-exit button {
     color: var(--gray);
     background-color: transparent;
     border: none;
     font-size: 1.75rem;
     cursor: pointer;
-  }
-  
-  .form-modal-exit button:hover {
+}
+
+.profile-modal-exit button:hover {
     color: var(--white);
-  }
+}
 
-  
-/* Form Modal Body Components */
+.profile-modal-exit p {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 
-.form-modal-body {
+
+/* Profile Modal Body Components */
+
+.profile-modal-body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,24 +59,22 @@
     color: var(--gray);
 }
 
-.formik-container {
+.profile-form-container {
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-rows: repeat(4, 25%);
-    grid-template-columns: repeat(2, 50%);
-    grid-gap: 10px 0px;
-    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
 }
 
-.formik-container .formik-item {
+.profile-form-container .profile-form-item {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-} 
+    margin-bottom: 15px;
+}
 
-.formik-container #input-suggest {
+.profile-form-container #input-edit {
     height: 25px;
     width: 50%;
     max-width: 250px;
@@ -80,28 +86,12 @@
     outline: none;
 }
 
-.formik-container #input-excerpt {
-    height: 100px;
-    width: 80%;
-    max-width: 400px;
-    font-size: 1rem;
-    border-style: none;
-    border-radius: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
-    outline: none;
-}
-
-.formik-container textarea {
-    font-family: sans-serif, Helvetica, Arial;
-}
-
-.formik-container label {
+.profile-form-container label {
     font-size: 1.25rem;
     margin-bottom: 3px;
 }
 
-.formik-error {
+.profile-form-error {
     color: var(--red);
     margin-bottom: 3px;
 }
@@ -109,15 +99,15 @@
 
 /* Form Modal Footer Components */
 
-.form-modal-footer {
+.profile-modal-footer {
     flex: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .form-modal-footer button {
-    width: 150px;
+}
+
+.profile-modal-footer button {
+    width: 200px;
     height: 45px;
     margin: 20px;
     border: none;
@@ -125,17 +115,17 @@
     color: var(--white);
     font-size: 1.5rem;
     cursor: pointer;
-  }
-  
-  .form-modal-footer button:hover {
+}
+
+.profile-modal-footer button:hover {
     background-color: var(--gray);
     color: var(--black);
-  }
-  
-  .form-modal-cancel {
+}
+
+.profile-modal-cancel {
     background-color: var(--red);
-  }
-  
-  .form-modal-confirm {
-    background-color: var(--green)
-  }
+}
+
+.profile-modal-confirm {
+    background-color: var(--green);
+}
