--- a/client/src/components/EntriesTable/EntriesTable.css
+++ b/client/src/components/EntriesTable/EntriesTable.css
@@ -14,6 +14,14 @@
 }
 
 
+.no-entries-text {
+    text-align: left;
+    font-size: 2rem;
+    margin-top: 25px;
+    margin-bottom: 25px;   
+    color: var(--gray);
+}
+
 /* Entry Table Components */
 
 .entry-table {
