--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   padding: 0;
+  margin-top: 55px;
   font-family: sans-serif, Helvetica, Arial;
   font-size: 16px;
   background: var(--black);
